# Autonomous-Line-Tracking

./: deployment_and_run_guide.md  lineTrackingInstructions.txt  oonBoardDetection.txt  smooth_avoidance_options.md  walkthrough.md
docs/: CODEBASE_GRAPH_ANALYSIS.md  DEEP_DIVE_TECHNICAL.md  PROJECT_OVERVIEW.md  control_system_explanation.md  obstacle_avoidance_logic.md  smooth_avoidance_options.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
waffle_pi_lane_tracking/: package.xml  setup.cfg  setup.py
waffle_pi_lane_tracking/launch/: full_robot.launch.py  lane_tracking.launch.py  line_tracking.launch.py
waffle_pi_lane_tracking/rviz/: vision.rviz
waffle_pi_lane_tracking/waffle_pi_lane_tracking/: birds_eye_view.py  control_robot.py  curve_fit.py  detect_lane.py  lane_filter.py  line_tracking.py
